# dia

./: .editorconfig  .gitignore  AGENTS.md  PLAN.md  commitlint.config.js  package.json
dia-cli/: Cargo.toml  README.md  build.zig  build.zig.zon
dia-cli/src/: bookmarks.rs  config.rs  history.rs  history.zig  main.rs  main.zig  model.rs  model.zig  output.rs  output.zig  search.rs  tabs.rs  tabs.zig
dia-rs/: Cargo.toml
dia-rs/src/: history.rs  main.rs
dia-zig/: build.zig  build.zig.zon
dia-zig/src/: bookmarks.zig  config.zig  history.zig  main.zig  output.zig  search.zig  tabs.zig
scripts/: bench.sh
